Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2017-07-28 11:32:02 -0400
  - Fix undef warning

0.04_03   2017-07-27 21:37:19 -0400
  - Support running out of a blib on Strawberry Perl

0.04_02   2017-07-27 06:02:20 -0400
  - Fix small but important syntax error introduced in 0.04_01

0.04_01   2017-07-27 05:39:48 -0400
  - Support running out of a blib

0.03      2017-07-07 12:14:32 -0400
  - Set PERL environment variable (except on MSWin32)

0.02      2017-06-27 05:08:34 -0400
  - Fix requirements for Windows

0.01      2017-06-26 17:20:24 -0400
  - initial version