@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Support for MSYS2 / MinGW
 
 0.05      2017-07-28 11:32:02 -0400
   - Fix undef warning
